--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
   <div class="w3-container w3-center" data-aos="fade-up">
 
 
-            <p>I grew up in South Texas but I moved to North Texas in 2013. <br>I originally was pursuing a degree in the Information Technology field but I have decided to pursue my passsion as an artist.To enhance my skills I went back to school and earned my associates degree in Graphic Communications, as well as several certifications. <br> Now, I am currently enrolled in the University of Texas at Arlington and my goal is to complete my bachelors degree in Studio Art with a focus in Animation.</p>
+            <p>I grew up in Brownsville, it is a the most southern point in Texas right on the border with Mexico. My Mexican-American culture has always been an inspiration for me as an artist. <b>I moved to North Texas in 2013 and I decided to pursue my passsion as an artist.<br>To enhance my skills I went back to school and earned my associates degree in Graphic Communications, as well as several certifications. <br> Now, I am currently enrolled in the University of Texas at Arlington and my goal is to complete my bachelors degree in Studio Art with a focus in Animation.</p>
          
             <p> I have experience as a freelance designer but I would like to work and learn alongside other experienced artists who currently work in the industry.</p>
             <p><a href="img/Felix Zavala Resume 2021.pdf" class="readmore">Download my Resume</a></p>
