--- a/index.html
+++ b/index.html
@@ -134,8 +134,9 @@
 
 
     <!-- ======= Services Section ======= -->
-
-          <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
+  <section class="section site-portfolio">
+      <div class="container">
+        <div class="row mb-5 align-items-center data-aos="fade-up">
                   <h2>El Artist</h2>
             
 <!-- Place <div> tag where you want the feed to appear -->
