--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <section class="section site-portfolio">
       <div class="container">
         <div class="row mb-5 align-items-center data-aos="fade-up">
-                  <h2>El Artist</h2>
+                  <h2>Keep up with me on Social Media</h2>
             
 <!-- Place <div> tag where you want the feed to appear -->
 <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
@@ -149,7 +149,7 @@ var i, e, d = document, s = "script";i = d.createElement("script");i.async = 1;
 i.src = "https://cdn.curator.io/published/851066e1-93ae-4f0a-9e9f-164c17d6f7c6.js";
 e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
 })();
-</script>            <p class="mb-0"></p>
+</script>          <p class="mb-0"></p>
           </div>
 
 
