--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                   <h2>Keep up with me on Social Media</h2>
             
 <!-- Place <div> tag where you want the feed to appear -->
-<div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
+<div id="curator-feed-default-feed-layout"></div>
 <!-- The Javascript can be moved to the end of the html page before the </body> tag -->
 <script type="text/javascript">
 /* curator-feed-default-feed-layout */
