--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <section class="section site-portfolio">
       <div class="container">
         <div class="row mb-5 align-items-center data-aos="fade-up">
-                  <h2>Keep up with me on Social Media</h2>
+                  <h2>Check out my Gram!</h2>
             
 <!-- Place <div> tag where you want the feed to appear -->
 <div id="curator-feed-default-feed-layout"></div>
