--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       <div class="container">
         <div class="row mb-5 align-items-center data-aos="fade-up">
                   <h2>Check out my Gram!</h2>
-            
+            <div id="curator-feed-default-feed-layout">
 <!-- Place <div> tag where you want the feed to appear -->
 <div id="curator-feed-default-feed-layout"></div>
 <!-- The Javascript can be moved to the end of the html page before the </body> tag -->
