--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
-       
+       <a href="https://twitter.com/GraphicFelix"><span class="bi bi-twitter"></span></a>
           <a href="https://www.facebook.com/GraphicFelix"><span class="bi bi-facebook"></span></a>
           <a href="https://www.instagram.com/graphic_felix/"><span class="bi bi-instagram"></span></a>
           <a href="https://www.youtube.com/channel/UCpo68l_fzOgV05so_EnNdyg"><span class="bi bi-youtube"></span></a>
