--- a/image3.html
+++ b/image3.html
@@ -134,8 +134,8 @@
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
-          <a href="#"><span class="bi bi-twitter"></span></a>
-          <a href="#"><span class="bi bi-facebook"></span></a>
+         <a href="https://twitter.com/GraphicFelix"><span class="bi bi-twitter"></span></a>
+          <a href="https://www.facebook.com/GraphicFelix"><span class="bi bi-facebook"></span></a>
           <a href="https://www.instagram.com/graphic_felix/"><span class="bi bi-instagram"></span></a>
           <a href="https://www.youtube.com/channel/UCpo68l_fzOgV05so_EnNdyg"><span class="bi bi-youtube"></span></a>
         </div>
