--- a/image3.html
+++ b/image3.html
@@ -101,7 +101,8 @@
                 <p class="mb-4"><span class="text-muted">Design, Typography, & Illustration</span></p>
 
                 <div class="mb-5">
-                  <p>. </p>
+                  <p> This is a piece I created for my portfolio class. We were asked to create a piece that incorporated our skills in typography, illustraion, and photoshop. 
+                </p>
 
                 </div>
 
