--- a/image3.html
+++ b/image3.html
@@ -71,7 +71,7 @@
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
             <h2>Tyson Fury Article</h2>
-            <p>A story on the Gypsy King </p>
+            <p>A story on the one and only Gypsy King</p>
           </div>
         </div>
       </div>
