--- a/image3.html
+++ b/image3.html
@@ -95,7 +95,12 @@
                 <div class="mb-5">
                   <p> This is a piece I created for my portfolio class. We were asked to create a piece that incorporated our skills in typography, illustration, and photoshop. 
                 </p>
-
+<h4 class="h4 mb-3">What I did</h4>
+                <ul class="list-unstyled list-line mb-5">
+                  <li>All of the text and typography in the image was created in Adobe InDesign</li>
+                  <li>The image of Tyson was manipulated in Adobe Photoshop. </li>
+                  <li>All the shapes were created in Adobe Illustrator</li>
+                </ul>
                 </div>
 
             
