--- a/image2.html
+++ b/image2.html
@@ -80,8 +80,19 @@
                 <h3 class="h3">Logo Creation</h3>
                 <p class="mb-4"><span class="text-muted">Design & Illustration</span></p>
 
+                <div class="mb-5"><h4 class="h4 mb-3">What is it</h4>
                 <div class="mb-5">
-                  <p>I worked with Rush Creek Church to create this logo for a newly formed outreach center. As part of their movement for change and hope in East Fort Worth, I wanted the logo to express Hope. I was intentional in using the color yellow because it represents the color of hope and optimisim. </p>
+                <p>I was hired by Rush Creek Church to create a logo for a newly formed outreach center.  </p>
+<h4 class="h4 mb-3">What I did</h4>
+                <ul class="list-unstyled list-line mb-5">
+                  <li>Gathered input from the client to get an understanding of what they were envisioning</li>
+                  <li>I created some concept ideas for the client to revise. I was asked to combine some ideas for the final concept.</li>
+                  <li> Created the final design in Adobe Illustrator.</li>
+                </ul>
+                  
+                  <h4 class="h4 mb-3">Insight into my vision</h4>
+                  <p>I wanted the logo to express Hope. I was intentional in using the color yellow because it represents the color of hope and optimisim.</p>
+     
 
                 </div>
 
