--- a/image2.html
+++ b/image2.html
@@ -43,7 +43,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-     <a class="navbar-brand" href="index.html"><img src="img/FelixZavalaScriptblue.png" width="35%"></a> 
+     <a class="navbar-brand" href="index.html"><img src="img/FelixZavalaScriptblue.png" width="35%" alt="Felix Zavala dot com logo"></a> 
 
         <span></span>
       </a>
@@ -66,7 +66,7 @@
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img src="img/HHC.png" alt="Image" class="img-fluid">
+              <img src="img/HHC.png" alt="Handley Hope Center Logo" width=40% class="img-fluid">
              &nbsp;
               &nbsp;
               &nbsp;
