--- a/image2.html
+++ b/image2.html
@@ -57,7 +57,7 @@
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
             <h2>Handley Hope Center Logo</h2>
-            <p> </p>
+            <p>Transforming lives in East Fort Worth</p>
           </div>
         </div>
       </div>
@@ -77,8 +77,7 @@
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
-                <h3 class="h3">Logo Creation</h3>
-                <p class="mb-4"><span class="text-muted">Design & Illustration</span></p>
+   
 
                 <div class="mb-5"><h4 class="h4 mb-3">What is it</h4>
                 <div class="mb-5">
