--- a/image2.html
+++ b/image2.html
@@ -66,14 +66,14 @@
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img src="img/HHC.png" alt="Handley Hope Center Logo" width=40% class="img-fluid">
+              <img src="img/HHC.png" alt="Handley Hope Center Logo" width=35% class="img-fluid">
              &nbsp;
               &nbsp;
               &nbsp;
               &nbsp;
               <br>
               <br>
-               <img src="img/IMG_0972.PNG" alt="Image" class="img-fluid">
+               <img src="img/IMG_0972.PNG" alt="Image" class="img-fluid"  width=30% alt="Handley Hope Center sign">
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
