--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </a>
           </div>
           <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="beardoil.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Beard Oil Label</h3>
                 <span>Design & Mock-up</span>
