--- a/beardoil.html
+++ b/beardoil.html
@@ -64,6 +64,12 @@
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
               <img src="img/beard oil bottle mockup portfolio1.jpg" alt="Beard Oil bottle mockup" class="img-fluid">
+              
+                       &nbsp;
+              &nbsp;
+              &nbsp;
+              &nbsp;
+               <img src="img/Beard Oil Label.jpg" alt="Beard oil label" Width=75% class="img-fluid">
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
