--- a/beardoil.html
+++ b/beardoil.html
@@ -53,8 +53,8 @@
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
-            <h2>Beard Oil Bottle</h2>
-            <p>Half asleep, caffeinated, and just a little bit late.</p>
+            <h2>Beard Oil</h2>
+            <p>Smooth like butter</p>
           </div>
         </div>
       </div>
@@ -76,13 +76,13 @@
         
 
                 <div class="mb-5">
-                  <p>Like the title intels this is an illustration I created as a parody of an office worker who did not get enough sleep.This illustration was created using Adobe Illustrator.  </p>
+                  <p> </p>
 
                 </div>
 
                  <div class="mb-5"><h4 class="h4 mb-3">What is it</h4>
                 <div class="mb-5">
-                <p> I created as a parody of an office worker who did not get enough sleep. </p>
+                <p> This is a label I created </p>
 <h4 class="h4 mb-3">What I did</h4>
                 <ul class="list-unstyled list-line mb-5">
                   <li>I sketched this illustration</li>
