--- a/image1.html
+++ b/image1.html
@@ -70,13 +70,12 @@
         
 
                 <div class="mb-5">
-                  <p>Like the title intels this is an illustration I created as a parody of an office worker who did not get enough sleep.This illustration was created using Adobe Illustrator.  </p>
 
                 </div>
 
                  <div class="mb-5"><h4 class="h4 mb-3">What is it</h4>
                 <div class="mb-5">
-                <p> I created as a parody of an office worker who did not get enough sleep. </p>
+                <p> I created this image as a parody of an office worker who did not get enough sleep and is deperately trying to stay awake with too much coffee. </p>
 <h4 class="h4 mb-3">What I did</h4>
                 <ul class="list-unstyled list-line mb-5">
                   <li>I sketched this illustration</li>
