--- a/image1.html
+++ b/image1.html
@@ -75,7 +75,7 @@
 
                  <div class="mb-5"><h4 class="h4 mb-3">What is it</h4>
                 <div class="mb-5">
-                <p> I created this image as a parody of an office worker who did not get enough sleep and is deperately trying to stay awake with too much coffee. </p>
+                <p> An illustration of an American corporate worker </p>
 <h4 class="h4 mb-3">What I did</h4>
                 <ul class="list-unstyled list-line mb-5">
                   <li>I sketched this illustration</li>
