--- a/beardoil.html
+++ b/beardoil.html
@@ -82,7 +82,7 @@
 
                  <div class="mb-5"><h4 class="h4 mb-3">What is it</h4>
                 <div class="mb-5">
-                <p> This is a beard oil label that I created for my custom beard oil. </p>
+                <p> This is a label that I created for the beard oil I make. I mainly make it for myself but I have been known to gift it to a few other beardsman. </p>
 <h4 class="h4 mb-3">What I did</h4>
                 <ul class="list-unstyled list-line mb-5">
                   <li>I digitally created the design</li>
