--- a/subro.html
+++ b/subro.html
@@ -54,7 +54,7 @@
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
             <h2>SUBRO Tee</h2>
-            <p></p>
+            <p>Submission Robot Jiu-jitsu Apparel</p>
           </div>
         </div>
       </div>
@@ -72,14 +72,13 @@
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
-                <h3 class="h3">Design & Mock-Up</h3>
-                <p class="mb-4"><span class="text-muted">Design, Typography, & Illustration</span></p>
+
 
                      
     
       <div class="mb-5"><h4 class="h4 mb-3">What is it</h4>
                 <div class="mb-5">
-                <p> I created as a parody of an office worker who did not get enough sleep. </p>
+                <p> These are some designs I created for apparel</p>
 <h4 class="h4 mb-3">What I did</h4>
                 <ul class="list-unstyled list-line mb-5">
                   <li>I sketched this illustration</li>
