--- a/subro.html
+++ b/subro.html
@@ -81,10 +81,9 @@
                 <p> These are some designs I created for an apparel company.</p>
 <h4 class="h4 mb-3">What I did</h4>
                 <ul class="list-unstyled list-line mb-5">
-                  <li>I sketched this illustrations</li>
-                  <li>After several revisions we agreed on the final designs.</li>
+                  <li>I sketched several different versions of these illustrations</li>
                   <li>I Created the final design in Adobe Illustrator.</li>
-                     <li>Provided several different mock-ups to provide a better idea of the final design.</li>
+                     <li>Provided several different mock-ups to present a better idea of the final designs.</li>
                 </ul>
                   
                   <h4 class="h4 mb-3">Insight into my vision</h4>
