--- a/image2.html
+++ b/image2.html
@@ -56,7 +56,7 @@
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
-            <h2>Handley Hope Center Logo</h2>
+            <h2>Handley Hope Center Logo	&#128591; </h2>
             <p>Transforming lives in East Fort Worth</p>
           </div>
         </div>
@@ -66,7 +66,7 @@
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img src="img/HHC.png" alt="Handley Hope Center Logo" width=85% class="img-fluid">
+              <img src="img/HHC.png" alt="Handley Hope Center Logo" width=80% class="img-fluid">
               <br>
              &nbsp;
               &nbsp;
@@ -84,7 +84,7 @@
 
                 <div class="mb-5"><h4 class="h4 mb-3">What is it</h4>
                 <div class="mb-5">
-                <p>I was hired by Rush Creek Church to create a logo for a newly formed outreach center.  </p>
+                <p>I was hired to create a logo for a newly formed outreach center.  </p>
 <h4 class="h4 mb-3">What I did</h4>
                 <ul class="list-unstyled list-line mb-5">
                   <li>Gathered input from the client to get an understanding of what they were envisioning</li>
