--- a/image1.html
+++ b/image1.html
@@ -53,7 +53,7 @@
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
-            <h2>Not Enough Sleep Office Guy</h2>
+            <h2>Not Enough Sleep Office Guy &#9749;</h2>
             <p>Half asleep, caffeinated, and just a little bit late.</p>
           </div>
         </div>
