--- a/subro.html
+++ b/subro.html
@@ -53,7 +53,7 @@
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
-            <h2>SUBRO Tee</h2>
+            <h2>SUBRO Tee &#57350;</h2>
             <p>Submission Robot Jiu-jitsu Apparel</p>
           </div>
         </div>
