--- a/image4.html
+++ b/image4.html
@@ -79,7 +79,7 @@
                
             <div class="mb-5"><h4 class="h4 mb-3">What is it</h4>
                 <div class="mb-5">
-                <p>This is an animated video that I made for fun. </p>
+                <p>This is an animated music video that I made. </p>
 <h4 class="h4 mb-3">What I did</h4>
                 <ul class="list-unstyled list-line mb-5">
                   <li>The image used in the video is a picture I took from my camping trip to Broken Bow, Oklahoma.</li>
