--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <section class="section site-portfolio">
       <div class="container">
         <div class="row mb-5 align-items-center data-aos="fade-up">
-                  <h2>Follow me on Social Media</h2>
+                  <h2>Social Media Updates</h2>
 <!-- Place <div> tag where you want the feed to appear -->
 <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
 <!-- The Javascript can be moved to the end of the html page before the </body> tag -->
