--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
             <h2>Welcome - Bienvenidos - 歡迎</h2>
-                <p>This is a collection of some of the stuff that I've created.</P>
+                <p>This is a collection of some of the pieces that I've created.</P>
 
             <p class="mb-0"></p>
           </div>
