--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
    
   <div class="w3-container w3-center" data-aos="fade-up">
        <h2>About Me</h2><br>
-                 <p><img src="img/vintagepic.png" alt="Image" class="img-fluid" width=25%></p>
+                 <p><img src="img/vintagepic.png" alt="Image" class="img-fluid" width=75% img align="left"></p>
     <p style="font-size:18px"><q><b>As far back as I can remember I have always been into creating art. <br>I may not have always had the skills but I have always had a passion for it.</q></p>
     </b>
 
