--- a/work-single.html
+++ b/work-single.html
@@ -12,6 +12,7 @@ body {font-family: "Lato", sans-serif}
 </style>
 <body>
 
+  
 <!-- Navbar -->
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card">
@@ -64,7 +65,28 @@ body {font-family: "Lato", sans-serif}
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
             <h2>Welcome - Bienvenidos - 歡迎</h2>
                 <p>This is a collection of some of the pieces that I've created.</P>
+<div class="row">
+  <div class="column">
+    <img src="wedding.jpg">
+    <img src="rocks.jpg">
 
+  </div>
+  <div class="column">
+    <img src="underwater.jpg">
+    <img src="ocean.jpg">
+
+  </div>
+  <div class="column">
+    <img src="wedding.jpg">
+    <img src="rocks.jpg">
+
+  </div>
+  <div class="column">
+    <img src="underwater.jpg">
+    <img src="ocean.jpg">
+
+  </div>
+</div>
             <p class="mb-0"></p>
           </div>
                     <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
