--- a/work-single.html
+++ b/work-single.html
@@ -10,6 +10,8 @@
 body {font-family: "Lato", sans-serif}
 .mySlides {display: none}
 </style>
+   <link href="assets/css/style.css" rel="stylesheet">
+
 <body>
 
 <!-- Navbar -->
