--- a/work-single.html
+++ b/work-single.html
@@ -10,6 +10,17 @@
 body {font-family: "Lato", sans-serif}
 .mySlides {display: none}
 </style>
+   
+   
+  <!-- Font -->
+<font face="Courier">
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
    <link href="assets/css/style.css" rel="stylesheet">
 
 <body>
