--- a/work-single.html
+++ b/work-single.html
@@ -52,8 +52,15 @@ body {font-family: "Lato", sans-serif}
 <!-- Page content -->
 <div class="w3-content" style="max-width:2000px;margin-top:46px">
 
-      <a class="navbar-brand" href="index.html"><img src="img/FelixZavalaScriptblue.png" width="35%"></a> 
 
+ <nav class="navbar navbar-light custom-navbar">
+    <div class="container">
+      <a class="navbar-brand" href="index.html"><img src="img/FelixZavalaScriptblue.png" width="35%"></a> 
+ 
+        <span></span>
+      </a>
+    </div>
+  </nav>
   <!-- The Band Section -->
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <h2 class="w3-wide">THE BAND</h2>
