--- a/work-single.html
+++ b/work-single.html
@@ -15,7 +15,10 @@ body {font-family: "Lato", sans-serif}
   <!-- Font -->
 <font face="Courier">
 
-
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
    <link href="assets/css/style.css" rel="stylesheet">
 
