--- a/work-single.html
+++ b/work-single.html
@@ -12,15 +12,6 @@ body {font-family: "Lato", sans-serif}
 </style>
    
    
-  <!-- Font -->
-<font face="Courier">
-
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-
-   <link href="assets/css/style.css" rel="stylesheet">
 
 <body>
 
@@ -89,6 +80,43 @@ body {font-family: "Lato", sans-serif}
 
   <!-- The Tour Section -->
    <main id="main">
+
+    <!-- ======= Works Section ======= -->
+    <!-- Font -->
+<font face="Courier">
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
+
+  <!-- =======================================================
+  * Template Name: MyPortfolio - v4.3.0
+  * Template URL: https://bootstrapmade.com/myportfolio-bootstrap-portfolio-website-template/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
+</head>
+
+<body>
+
+  <!-- ======= Navbar ======= -->
+
+
+  <nav class="navbar navbar-light custom-navbar">
+    <div class="container">
+      <a class="navbar-brand" href="index.html"><img src="img/FelixZavalaScriptblue.png" width="35%"></a> 
+ 
+        <span></span>
+      </a>
+    </div>
+  </nav>
+
+  <main id="main">
 
     <!-- ======= Works Section ======= -->
     <section class="section site-portfolio">
@@ -167,7 +195,6 @@ body {font-family: "Lato", sans-serif}
         </div>
       </div>
     </section>
-          
           
 
   <!-- Ticket Modal -->
