--- a/work-single.html
+++ b/work-single.html
@@ -93,13 +93,13 @@ body {font-family: "Lato", sans-serif}
           <!-- Photo Grid -->
 <div class="row"> 
   <div class="column">
-    <img src="/w3images/wedding.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
+    <img src="img/Mockup1.jpg" style="width:100%">
+    <img src="img/beard oil bottle mockup portfolio1.jpg" style="width:100%">
 
   </div>
   <div class="column">
-    <img src="/w3images/underwater.jpg" style="width:100%">
-    <img src="/w3images/ocean.jpg" style="width:100%">
+    <img src="img/IMG_0972.PNG" style="width:100%">
+    <img src="img/Graphic Tee thumb faded.jpg" style="width:100%">
   
   </div>  
   <div class="column">
