--- a/work-single.html
+++ b/work-single.html
@@ -134,15 +134,11 @@ body {
   
   </div>  
   <div class="column">
-    <img src="/w3images/wedding.jpg" style="width:100%">
+    <img src="img/Office Guy Clip Art.jpg" style="width:100%">
     <img src="/w3images/rocks.jpg" style="width:100%">
 
   </div>
-  <div class="column">
-    <img src="/w3images/underwater.jpg" style="width:100%">
-    <img src="/w3images/ocean.jpg" style="width:100%">
 
-  </div>
 </div>
 
   <!-- Ticket Modal -->
