--- a/work-single.html
+++ b/work-single.html
@@ -154,7 +154,7 @@ body {
   </div>  
   <div class="column">
     <img src="img/Office Guy Clip Art.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
+    <img src="img/maxresdefault.jpg"" style="width:100%">
 
   </div>
 
