--- a/work-single.html
+++ b/work-single.html
@@ -113,9 +113,9 @@ body {
   </nav>
   <!-- The Band Section -->
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-    <h2 class="w3-wide">THE ARTIST</h2>
-    <p class="w3-opacity"><i>An Introduction:</i></p>
-    <p class="w3-justify">I am originally from Brownsville, a city in the southernmost part of Texas.  I have been an artist all my life and I express my art in many different ways. Digital Art is just one of my many outlets. </p>
+    <h2 class="w3-wide">An Introduction</h2>
+    <p class="w3-opacity"><i>From the artist</i></p>
+    <p class="w3-justify"> I have been an artist all my life and I express my art in many different ways.</p>
     <div class="w3-row w3-padding-32">
       <div class="w3-third">
         <p>Name</p>
