--- a/work-single.html
+++ b/work-single.html
@@ -119,7 +119,7 @@ body {
     <div class="w3-row w3-padding-32">
       <div class="w3-third">
         <p>Name</p>
-        <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <img src="img/vintagepic.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
      
     </div>
   </div>
