--- a/work-single.html
+++ b/work-single.html
@@ -120,7 +120,7 @@ body {
       <div class="w3-third">
         <p>Name</p>
         <img src="img/vintagepic.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-     
+       </div>
     </div>
   </div>
 
