--- a/work-single.html
+++ b/work-single.html
@@ -115,7 +115,7 @@ body {
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <h2 class="w3-wide">An Introduction</h2>
     <p class="w3-opacity"><i>From the artist</i></p>
-    <p class="w3-justify"> I have been an artist all my life and I express my art in many different ways.</p>
+    <p class="w3-justify"> I have been an artist all my life and I express my art in many different ways. Here is some of my digital expressions.</p>
     <div class="w3-row w3-padding-32">
       <div class="w3-third">
      
