--- a/work-single.html
+++ b/work-single.html
@@ -113,9 +113,9 @@ body {
   </nav>
   <!-- The Band Section -->
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-    <h2 class="w3-wide">An Introduction</h2>
-    <p class="w3-opacity"><i>From the artist</i></p>
-    <p class="w3-justify">"Art is as simple as a carving on a cave or as complexed as an artificial intelligence creation."</p>
+    <h2 class="w3-wide">Welcome - Bienvenidos - 歡迎 </h2>
+    <p class="w3-opacity"><i>Thank you for taking the time to vist my page. #SUPPORTTHEARTS</i></p>
+    <p class="w3-justify"></p>
     <div class="w3-row w3-padding-32">
 
     </div>
