--- a/work-single.html
+++ b/work-single.html
@@ -187,7 +187,7 @@ e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
     <p class="w3-opacity w3-center"><i>Leave me a note!</i></p>
     <div class="w3-row w3-padding-32">
       <div class="w3-col m6 w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker" style="width:30px"></i> Dallas, US<br>
+        <i class="fa fa-map-marker" style="width:30px"></i> Dallas, Texas<br>
         <i class="fa fa-envelope" style="width:30px"> </i> Email: jfelixzavala@yahoo.com<br>
       </div>
       <div class="w3-col m6">
@@ -221,7 +221,7 @@ e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
   <i class="fa fa-twitter w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+
 </footer>
 
 <script>
