--- a/work-single.html
+++ b/work-single.html
@@ -184,10 +184,10 @@ e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
   <!-- The Contact Section -->
   <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
     <h2 class="w3-wide w3-center">CONTACT</h2>
-    <p class="w3-opacity w3-center"><i>Leave me a note!</i></p>
+    <p class="w3-opacity w3-center"><i></i></p>
     <div class="w3-row w3-padding-32">
       <div class="w3-col m6 w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker" style="width:30px"></i> Dallas, Texas<br>
+        <i class="fa fa-map-marker" style="width:30px"></i> Dallas, Texas USA<br>
         <i class="fa fa-envelope" style="width:30px"> </i> Email: jfelixzavala@yahoo.com<br>
       </div>
       <div class="w3-col m6">
