--- a/work-single.html
+++ b/work-single.html
@@ -191,7 +191,7 @@ e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
       </div>
     </div>
   </div>
-  
+                                                                              </div>
 <!-- End Page Content -->
 
 
