--- a/work-single.html
+++ b/work-single.html
@@ -143,7 +143,9 @@ body {
   <div class="column">
     <img src="img/Office Guy Clip Art.jpg" style="width:100%">
     <img src="img/maxresdefault.jpg"" style="width:100%">
-
+  </div> 
+                                                        </div>                                                
+                                                        
  <hr>
                                                         
 
