--- a/work-single.html
+++ b/work-single.html
@@ -129,10 +129,15 @@ body {
 <h2>El Portfolio</h2>
       <hr>
           <!-- Photo Grid -->
+      <div class="container">
 <div class="row"> 
   <div class="column">
     <img src="img/Mockup1.jpg" style="width:100%">
+            <div class="centered">Centered</div>
+</div>
     <img src="img/beard oil bottle mockup portfolio1.jpg" style="width:100%">
+       <div class="centered">Center</div>
+</div>
 
   </div>
   <div class="column">
