--- a/work-single.html
+++ b/work-single.html
@@ -68,6 +68,20 @@ body {
     max-width: 100%;
   }
 }
+   /* Container holding the image and the text */
+.container {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+   
+   /* Centered text */
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 </style>
 <body>
 
