--- a/work-single.html
+++ b/work-single.html
@@ -146,7 +146,7 @@ body {
       <div class="container">
 <div class="row"> 
   <div class="column">
-    <img src="img/Mockup1.jpg" style="width:100%">
+     <a href="image3.html"> <img src="img/Mockup1.jpg" style="width:100%"></a>
             <div class="centered">Centered</div>
 </div>
     <img src="img/beard oil bottle mockup portfolio1.jpg" style="width:100%">
