--- a/work-single.html
+++ b/work-single.html
@@ -67,21 +67,43 @@ body {
     flex: 100%;
     max-width: 100%;
   }
-}
-   /* Container holding the image and the text */
 .container {
   position: relative;
   text-align: center;
   color: white;
 }
-   
-   /* Centered text */
+
+.bottom-left {
+  position: absolute;
+  bottom: 8px;
+  left: 16px;
+}
+
+.top-left {
+  position: absolute;
+  top: 8px;
+  left: 16px;
+}
+
+.top-right {
+  position: absolute;
+  top: 8px;
+  right: 16px;
+}
+
+.bottom-right {
+  position: absolute;
+  bottom: 8px;
+  right: 16px;
+}
+
 .centered {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
 </style>
 <body>
 
