--- a/work-single.html
+++ b/work-single.html
@@ -130,13 +130,13 @@ body {
 <h2>El Portfolio</h2>
       <hr>
           <!-- Photo Grid -->
-      <div class="container">
+     
 <div class="row"> 
   <div class="column">
      <a href="image3.html"> <img src="img/Mockup1.jpg" style="width:100%"></a>
 
 </div>
-    <img src="img/beard oil bottle mockup portfolio1.jpg" style="width:100%">
+   <a href="beardoil.html"> <img src="img/beard oil bottle mockup portfolio1.jpg" style="width:100%"></a>
 
 </div>
 
