--- a/work-single.html
+++ b/work-single.html
@@ -147,7 +147,7 @@ body {
   
   </div>  
   <div class="column">
-    <img src="img/Office Guy Clip Art.jpg" style="width:100%">
+     <a href="image1.html"><img src="img/Office Guy Clip Art.jpg" style="width:100%"></a>
     <img src="img/maxresdefault.jpg"" style="width:100%">
   </div> 
                                                         </div>                                                
