--- a/work-single.html
+++ b/work-single.html
@@ -142,7 +142,7 @@ body {
 
   </div>
   <div class="column">
-    <img src="img/IMG_0972.PNG" style="width:100%">
+    <a href="image2.html"><img src="img/IMG_0972.PNG" style="width:100%">
     <img src="img/Graphic Tee thumb faded.jpg" style="width:100%">
   
   </div>  
