--- a/work-single.html
+++ b/work-single.html
@@ -138,8 +138,8 @@ body {
   </div>
      
   <div class="column">
-    <a href="image2.html"><img src="img/IMG_0972.PNG" style="width:100%">
-    <img src="img/Graphic Tee thumb faded.jpg" style="width:100%">
+     <a href="image2.html"><img src="img/IMG_0972.PNG" style="width:100%"></a>
+     <a href="subro.html"><img src="img/Graphic Tee thumb faded.jpg" style="width:100%"></a>
   
   </div>  
   <div class="column">
