--- a/work-single.html
+++ b/work-single.html
@@ -119,8 +119,8 @@ body {
     <p class="w3-justify"></p>
     <div class="w3-row w3-padding-32">
 
-    </div>
-  </div>
+                                                                              </div>
+                                                                              </div>
 
   <!-- The Tour Section -->
    <main id="main">
@@ -135,7 +135,7 @@ body {
   <div class="column">
      <a href="image3.html"><img src="img/Mockup1.jpg" style="width:100%"></a>
      <a href="beardoil.html"><img src="img/beard oil bottle mockup portfolio1.jpg" style="width:100%"></a>
-  </div>
+                                                                               </div>
      
   <div class="column">
      <a href="image2.html"><img src="img/IMG_0972.PNG" style="width:100%"></a>
@@ -144,9 +144,9 @@ body {
   </div>  
   <div class="column">
      <a href="image1.html"><img src="img/Office Guy Clip Art.jpg" style="width:100%"></a>
-    <img src="img/maxresdefault.jpg"" style="width:100%">
-  </div> 
-                                                        </div>                                                
+     <a href="image4.html"><img src="img/maxresdefault.jpg"" style="width:100%"></a>
+                                                                               </div> 
+                                                                               </div>                                                
                                                         
  <br>
  <br>
