--- a/works.html
+++ b/works.html
@@ -211,85 +211,50 @@ var i, e, d = document, s = "script";i = d.createElement("script");i.async = 1;
 i.src = "https://cdn.curator.io/published/851066e1-93ae-4f0a-9e9f-164c17d6f7c6.js";
 e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
 })();
-</script> 
-
-  </main><!-- End #main -->
-  <!-- The Contact Section -->
-  <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
-    <h2 class="w3-wide w3-center">CONTACT</h2>
-    <p class="w3-opacity w3-center"><i></i></p>
-    <div class="w3-row w3-padding-32">
-      <div class="w3-col m6 w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker" style="width:30px"></i> Dallas, Texas USA<br>
-        <i class="fa fa-envelope" style="width:30px"> </i> Email: jfelixzavala@yahoo.com<br>
-      </div>
-      <div class="w3-col m6">
-        <form action="/action_page.php" target="_blank">
-          <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-            <div class="w3-half">
-              <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
-            </div>
-            <div class="w3-half">
-              <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
-            </div>
-          </div>
-          <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
-          <button class="w3-button w3-black w3-section w3-right" type="submit">SEND</button>
-        </form>
-      </div>
-    </div>
-  </div>
-                                                                              </div>
-<!-- End Page Content -->
-
-
-<!-- Image of location/map -->
-
-
-<!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-  <a href="https://www.facebook.com/GraphicFelix"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-  <a href="https://www.instagram.com/graphic_felix/"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-  <a href="https://twitter.com/GraphicFelix"><i class="fa fa-twitter w3-hover-opacity"></i></a>
-  <a href="https://www.youtube.com/channel/UCpo68l_fzOgV05so_EnNdyg"><i class="fa fa-youtube w3-hover-opacity"></i></a>
-  <p class="w3-medium"> </p>
-</footer>
-
-<script>
-// Automatic Slideshow - change image every 4 seconds
-var myIndex = 0;
-carousel();
-
-function carousel() {
-  var i;
-  var x = document.getElementsByClassName("mySlides");
-  for (i = 0; i < x.length; i++) {
-    x[i].style.display = "none";  
-  }
-  myIndex++;
-  if (myIndex > x.length) {myIndex = 1}    
-  x[myIndex-1].style.display = "block";  
-  setTimeout(carousel, 4000);    
-}
-
-// Used to toggle the menu on small screens when clicking on the menu button
-function myFunction() {
-  var x = document.getElementById("navDemo");
-  if (x.className.indexOf("w3-show") == -1) {
-    x.className += " w3-show";
-  } else { 
-    x.className = x.className.replace(" w3-show", "");
-  }
-}
-
-// When the user clicks anywhere outside of the modal, close it
-var modal = document.getElementById('ticketModal');
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
 </script>
 
+  </main><!-- End #main -->
+
+  <!-- ======= Footer ======= -->
+
+  <footer class="footer" role="contentinfo">
+    <div class="container"> 
+      <div class="row">
+        <div class="col-sm-6">
+          <p class="mb-1">&copy; Copyright MyPortfolio. All Rights Reserved</p>
+          <div class="credits">
+            <!--
+            All the links in the footer should remain intact.
+            You can delete the links only if you purchased the pro version.
+            Licensing information: https://bootstrapmade.com/license/
+            Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=MyPortfolio
+          -->
+            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          </div>
+        </div>
+        <div class="col-sm-6 social text-md-end">
+       <a href="https://twitter.com/GraphicFelix"><span class="bi bi-twitter"></span></a>
+          <a href="https://www.facebook.com/GraphicFelix"><span class="bi bi-facebook"></span></a>
+          <a href="https://www.instagram.com/graphic_felix/"><span class="bi bi-instagram"></span></a>
+          <a href="https://www.youtube.com/channel/UCpo68l_fzOgV05so_EnNdyg"><span class="bi bi-youtube"></span></a>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
+                                 </font>
+
 </body>
+
 </html>
