--- a/work-single.html
+++ b/work-single.html
@@ -217,30 +217,16 @@ e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
 
   <!-- ======= Footer ======= -->
 
-  <footer class="footer" role="contentinfo">
-    <div class="container"> 
-      <div class="row">
-        <div class="col-sm-6">
-          <p class="mb-1">&copy; Copyright MyPortfolio. All Rights Reserved</p>
-          <div class="credits">
-            <!--
-            All the links in the footer should remain intact.
-            You can delete the links only if you purchased the pro version.
-            Licensing information: https://bootstrapmade.com/license/
-            Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=MyPortfolio
-          -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-          </div>
-        </div>
-        <div class="col-sm-6 social text-md-end">
-       <a href="https://twitter.com/GraphicFelix"><span class="bi bi-twitter"></span></a>
-          <a href="https://www.facebook.com/GraphicFelix"><span class="bi bi-facebook"></span></a>
-          <a href="https://www.instagram.com/graphic_felix/"><span class="bi bi-instagram"></span></a>
-          <a href="https://www.youtube.com/channel/UCpo68l_fzOgV05so_EnNdyg"><span class="bi bi-youtube"></span></a>
-        </div>
-      </div>
-    </div>
-  </footer>
+<!-- Footer -->
+<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+  <i class="fa fa-facebook-official w3-hover-opacity"></i>
+  <i class="fa fa-instagram w3-hover-opacity"></i>
+  <i class="fa fa-snapchat w3-hover-opacity"></i>
+  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+  <i class="fa fa-twitter w3-hover-opacity"></i>
+  <i class="fa fa-linkedin w3-hover-opacity"></i>
+  <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+</footer>
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
