--- a/work-single.html
+++ b/work-single.html
@@ -42,9 +42,9 @@ body {
   <div class="w3-bar w3-black w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-left" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="https://felixzavala.com/" class="w3-bar-item w3-button w3-padding-large">HOME</a>
-    <a href="https://felixzavala.com/about.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ABOUT THE ARTIST</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
-       <a href="https://felixzavala.com/store.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">STORE</a>
+    <a href="https://felixzavala.com/about.html" class="w3-bar-item w3-button w3-padding-large">ABOUT THE ARTIST</a>
+    <a href="#contact" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
+       <a href="https://felixzavala.com/store.html" class="w3-bar-item w3-button w3-padding-large">STORE</a>
 
       </div>
     </div>
@@ -52,20 +52,14 @@ body {
   </div>
 </div>
 
-<!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-<div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-  <a href="#band" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">BAND</a>
-  <a href="#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">TOUR</a>
-  <a href="#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
-  <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">MERCH</a>
-</div>
+
 
 <!-- Page content -->
 <div class="w3-content" style="max-width:2000px;margin-top:46px">
 
   <title>Felix Zavala</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="" name="A page to disply my digital art porfolio. ">
+  <meta content="" name="graphic, design, felix, zavala, art, portfolio, ">
 
   <!-- Favicons -->
   <link href="img/Felix Favicon.png" rel="icon">
