--- a/work-single.html
+++ b/work-single.html
@@ -41,7 +41,6 @@ body {
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-left" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="https://felixzavala.com/" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="https://felixzavala.com/about.html" class="w3-bar-item w3-button w3-padding-large">ABOUT THE ARTIST</a>
     <a href="#contact" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
        <a href="https://felixzavala.com/store.html" class="w3-bar-item w3-button w3-padding-large">STORE</a>
@@ -101,8 +100,8 @@ body {
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2>Welcome - Bienvenidos - 歡迎</h2>
-                <p>Thank you for taking the time to vist my page. #SUPPORTTHEARTS</P>
+           <center> <h2>Welcome - Bienvenidos - 歡迎</h2>
+             <p>Thank you for taking the time to vist my page. #SUPPORTTHEARTS</P></center>
 
             <p class="mb-0"></p>
           </div>
