--- a/work-single.html
+++ b/work-single.html
@@ -40,10 +40,10 @@ body {
 <!-- Navbar -->
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card">
-    <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-left" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+    <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-left" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"></a>
     <a href="https://felixzavala.com/about.html" class="w3-bar-item w3-button w3-padding-large">ABOUT THE ARTIST</a>
     <a href="#contact" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
-       <a href="https://felixzavala.com/store.html" class="w3-bar-item w3-button w3-padding-large">STORE</a>
+    <a href="https://felixzavala.com/store.html" class="w3-bar-item w3-button w3-padding-large">STORE</a>
 
       </div>
     </div>
