--- a/work-single.html
+++ b/work-single.html
@@ -100,8 +100,8 @@ body {
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-           <center> <h2>Welcome - Bienvenidos - 歡迎</h2>
-             <p>Thank you for taking the time to vist my page. #SUPPORTTHEARTS</P></center>
+          <h2>Welcome - Bienvenidos - 歡迎</h2>
+             <p>Thank you for taking the time to vist my page. #SUPPORTTHEARTS</P>
 
             <p class="mb-0"></p>
           </div>
