--- a/work-single.html
+++ b/work-single.html
@@ -100,7 +100,7 @@ body {
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
           <h2>Welcome - Bienvenidos - 歡迎</h2>
-             <p>Thank you for taking the time to vist my page. #SUPPORTTHEARTS</P>
+             <p>Thank you for taking the time to vist my page. Below is a collection of some of my digital creations. #SUPPORTTHEARTS</P>
 
             <p class="mb-0"></p>
           </div>
