--- a/index.html
+++ b/index.html
@@ -4,10 +4,60 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body {font-family: "Lato", sans-serif}
+.mySlides {display: none}
+</style>
+   
+
+
+
+<style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: Arial;
+}
+
+.header {
+  text-align: center;
+  padding: 32px;
+}
+
+
+
+
+</style>
+<body>
+
+<!-- Navbar -->
+<div class="w3-top">
+  <div class="w3-bar w3-black w3-card">
+    <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-left" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"></a>
+    <a href="https://felixzavala.com/about.html" class="w3-bar-item w3-button w3-padding-large">ABOUT THE ARTIST</a>
+    <a href="#contact" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
+    <a href="https://felixzavala.com/store.html" class="w3-bar-item w3-button w3-padding-large">STORE</a>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<!-- Page content -->
+<div class="w3-content" style="max-width:2000px;margin-top:46px">
 
   <title>Felix Zavala</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="" name="A page to disply my digital art porfolio. ">
+  <meta content="" name="graphic, design, felix, zavala, art, portfolio, ">
 
   <!-- Favicons -->
   <link href="img/Felix Favicon.png" rel="icon">
@@ -25,12 +75,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: MyPortfolio - v4.3.0
-  * Template URL: https://bootstrapmade.com/myportfolio-bootstrap-portfolio-website-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+
 </head>
 
 <body>
@@ -54,20 +99,21 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2>Welcome - Bienvenidos - 歡迎</h2>
-                <p>This is a collection of some of the pieces that I've created.</P>
+          <h2>Welcome - Bienvenidos - 歡迎</h2>
+             <p>Thank you for taking the time to vist my page. Below is a collection of some of my digital creations. #SUPPORTTHEARTS</P>
 
             <p class="mb-0"></p>
           </div>
                     <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
             <div id="" class="filters">
-              <a href="about.html">About Me</a>
+
           
             
             </div>
           </div>
         </div>
-
+<br>
+     <hr>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
           <div class="item illustration col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="image3.html" class="item-wrap fancybox">
@@ -154,30 +200,14 @@ e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
 
   <!-- ======= Footer ======= -->
 
-  <footer class="footer" role="contentinfo">
-    <div class="container"> 
-      <div class="row">
-        <div class="col-sm-6">
-          <p class="mb-1">&copy; Copyright MyPortfolio. All Rights Reserved</p>
-          <div class="credits">
-            <!--
-            All the links in the footer should remain intact.
-            You can delete the links only if you purchased the pro version.
-            Licensing information: https://bootstrapmade.com/license/
-            Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=MyPortfolio
-          -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-          </div>
-        </div>
-        <div class="col-sm-6 social text-md-end">
-       <a href="https://twitter.com/GraphicFelix"><span class="bi bi-twitter"></span></a>
-          <a href="https://www.facebook.com/GraphicFelix"><span class="bi bi-facebook"></span></a>
-          <a href="https://www.instagram.com/graphic_felix/"><span class="bi bi-instagram"></span></a>
-          <a href="https://www.youtube.com/channel/UCpo68l_fzOgV05so_EnNdyg"><span class="bi bi-youtube"></span></a>
-        </div>
-      </div>
-    </div>
-  </footer>
+<!-- Footer -->
+<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+                            <a href="https://www.facebook.com/GraphicFelix"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+                            <a href="https://www.instagram.com/graphic_felix/"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+                            <a href="https://twitter.com/GraphicFelix"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+                            <a href="https://www.youtube.com/channel/UCpo68l_fzOgV05so_EnNdyg"><i class="fa fa-youtube w3-hover-opacity"></i></a>
+
+</footer>
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
