--- a/about.html
+++ b/about.html
@@ -98,8 +98,8 @@ body {
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
-            <h2>Tyson Fury Article &#129354;</h2>
-            <p>A story on the one and only Gypsy King</p>
+            <h2>About the Artist;</h2>
+            <p>An introduction to the artist:</p>
           </div>
         </div>
       </div>
@@ -108,12 +108,7 @@ body {
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img src="img/Mockup.jpg" alt="Image" class="img-fluid">
-             &nbsp;
-              &nbsp;
-              &nbsp;
-              &nbsp;
-               <img src="img/Magazine_Mockup_3.jpg" alt="Image" class="img-fluid">
+              <img src="img/Portfolio pic.jpg" alt="Image" class="img-fluid">
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
         
