--- a/about.html
+++ b/about.html
@@ -118,9 +118,9 @@ body {
                 </p>
 <h4 class="h4 mb-3">Some of my credentials:</h4>
                 <ul class="list-unstyled list-line mb-5">
-                  <li>All of the text and typography in the image was created in Adobe InDesign</li>
-                  <li>The image of Tyson was manipulated in Adobe Photoshop. </li>
-                  <li>All the shapes were created in Adobe Illustrator</li>
+                  <li>Associate of Arts, Graphic Communications</li>
+                  <li>Computer Graphics Certificate</li>
+                  <li>Photo Retouching Certificate</li>
                 </ul>
                   
                   <h4 class="h4 mb-3">Insight into my vision</h4>
