--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@ body {
         
 <h4 class="h4 mb-3">Who am I?</h4>
                 <div class="mb-5">
-                  <p> I was born and raised in a city called Brownsville which is located in the southern most part of Texas. I moved to the Dallas-Fort Worth Metroplex in 2013 and was pretty much on my own in a new city. With this new found freedom I began making more time for stuff I love like martial arts, traveling, and of course art. I decided to go back to school and continue my education in the graphic arts. I have since earned an associates degree and several certifications in the graphic arts and I have begun working as a freelance graphic designer.
+                  <p> I was born and raised in a city called Brownsville which is located in the southern most part of Texas. I moved to the Dallas-Fort Worth Metroplex in 2013 and was pretty much on my own in a new city. With this new found freedom I began making more time for stuff I love like martial arts, traveling, and of course art. I decided to go back to school and continue my education in the graphic arts. I have since earned a degree and I have begun working as a freelance graphic artist.
                 </p>
 <h4 class="h4 mb-3">Some of my credentials:</h4>
                 <ul class="list-unstyled list-line mb-5">
